# binja-esr

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  MISSING_INSTRUCTIONS.md  PHASE8_STATUS.md  PHASE9_STATUS.md  README.md  __init__.py  _sc62015_rustcore.pyi  bisect_test.py  keyboard_trace_analysis.md  mypy.ini  parity_status.md  plan.md  plan_llama.md  plugin.json  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  run-tests.fish  setup-branch-protection.sh
.github/workflows/: ci.yml  dispatch-private-on-pr.yml  dispatch-private-on-push.yml  lint-format.yml  llama-perfetto-smoke.yml  rust-clippy.yml  rust-tests.yml  tests.yml  web.yml
binja_helpers/: README.md  binja_api.py  coding.py  eval_llil.py  import_helper.py  mock_binaryview.py  mock_llil.py  pyproject.toml  test_coding.py  test_eval_llil.py  tokens.py
docs/: llama_audit_runbook.md  llama_design.md  llama_mismatch_plan.md  llama_parity_plan.md  rust_emulator_file_map.md  rust_emulator_reuse.md  rust_llil_lowering.md  sc62015_assembler_improvement_proposal.md  sc62015_python_emulator_surface.md  sc62015_rustcore_scaffold.md  scil_arch_report.md
emulators/rust_scil/: Cargo.toml
examples/: run_pce500.py  test_lcd_addressing.py
lark/: __init__.py
pce500/: CLAUDE.md  MIGRATION_GUIDE.md  README.md  __init__.py  cli.py  emulator.py  example_simplified.py  keyboard.py  keyboard_compat.py  keyboard_handler.py  keyboard_hardware.py  keyboard_matrix.py  lcd-controller-visualization.py  machine.py  memory.py  memory_bus.py  orchestrator.py  pyproject.toml  requirements.txt  run_million_instructions.py  run_pce500.py  scheduler.py  simple_emulator.py  simple_memory.py  state_model.py  test_complete_tracing.py  test_perfetto_simplified.py  trace_manager.py  tracing_config.py  tracing_emulator.py
pce500/config/: __init__.py  machine_config.py
pce500/data/: pce500_trace.txt
pce500/debug/: __init__.py  inspector.py  renderer.py
pce500/display/: __init__.py  controller_wrapper.py  font.py  hd61202.py  hd61202_toolkit.py  hd61202u_toolkit.py  hd61700.py  lcd_controller.py  lcd_visualization.py  pipeline.py  simple_hd61202.py  t6a04.py  test_controller_wrapper.py  test_font_helpers.py  test_hd61202.py  test_lcd_addressing.py  test_lcd_visualization.py  test_pipeline.py  test_text_decoder.py  text_decoder.py
pce500/memory/: __init__.py  mapper.py  regions.py
pce500/peripherals/: __init__.py  cassette.py  manager.py  serial.py  stdio.py
pce500/tests/: __init__.py  test_controller_wrapper.py  test_cycle_count_loops.py  test_debug_pc.py  test_emulator_performance.py  test_execution_register_tracing.py  test_execution_trace.py  test_interrupts.py  test_interrupts_typed_inline_snapshots.py  test_irq_tracing_regression.py  test_key_irq_latch.py  test_key_seq.py  test_keyboard_cpu_integration.py  test_keyboard_handler.py  test_keyboard_hardware_integration.py  test_keyboard_hardware_pf1.py  test_keyboard_interrupt_mask.py  test_keyboard_interrupt_rom.py  test_keyboard_matrix.py  test_keyboard_simple_demo.py  test_keyboard_simulation.py  test_keyboard_strobing.py  test_keyboard_strobing_demo.py  test_lcd_read_parity.py  test_memory_alias_and_irq.py  test_memory_bus.py  test_ocr_optimization.py  test_orchestrator.py  test_perfetto_tracing.py  test_peripherals.py  test_scheduler.py  test_simplified_emulator.py  test_snapshot_roundtrip.py  test_state_model.py  test_timer_reset.py  test_tracing_call_stack.py  test_tracing_integration.py  test_wait_perfetto_parity.py
pce500/tools/: analyze_keyboard_divergence.py  debug_keyboard.py  perfetto_trace_compare.py  performance_findings.md  trace_memory.py
pce500/trace/: README.md  __init__.py
pce500/tracing/: __init__.py  dispatcher.py  perfetto_tracing.py
sc62015/: __init__.py  arch.py  mypy.ini  run-mypy.fish  run-pyright.fish  test_arch.py  test_intrinsics.py  test_view.py  view.py
sc62015/core/: Cargo.toml
sc62015/core/examples/: perfetto_thread_names.rs
sc62015/core/src/: async_cpu.rs  async_devices.rs  async_driver.rs  async_runtime.rs  device.rs  eval.rs  exec.rs  iq7000.rs  keyboard.rs  lcd.rs  lcd_text.rs  lib.rs  loop_detector.rs  memory.rs  pce500.rs  perfetto.rs  sio.rs  snapshot.rs  timer.rs
sc62015/core/src/llama/: async_eval.rs  dispatch.rs  eval.rs  mod.rs  opcodes.rs  operands.rs  parity.rs  state.rs
sc62015/core/tests/: keyboard.rs  overlay.rs  pce500_core_runtime.rs  pce500_iocs_putc.rs  pce500_iocs_putchar_xy.rs  perfetto_callui_root_slice.rs  write_capture.rs
sc62015/decoding/: __init__.py  bind.py  compat_il.py  decode_map.py  dispatcher.py  pre_modes.py  reader.py  replay.py
sc62015/parity/: Cargo.toml  build.rs
sc62015/parity-harness/: Cargo.toml
sc62015/pysc62015/: README.md  __init__.py  _rust_bridge.py  analysis.py  asm.lark  asm.py  binja_api.py  cached_decoder.py  cpu.py  (+38 more)
sc62015/rustcore/: Cargo.toml  build.rs
sc62015/rustcore/src/: constants.rs  cpu.rs  decode.rs  executor.rs  keyboard.rs  lcd.rs  lib.rs  lowering.rs  memory.rs  state.rs
sc62015/rustcore/tests/: python_parity.rs
scripts/: capture_snapshot.py  check_llama_opcodes.py  check_llama_pre_tables.py  check_rust_py_parity_annotations.py  compare_perfetto_traces.py  generate_llama_opcodes.py  js_function_runner_cli.mjs  list_pre_variants.py  list_sources.sh  run-parity.sh  run_cpu_pytests.py  run_from_snapshot.py  run_mypy.py  run_pyright.py  run_with_snapshot.sh  verify_perfetto_parity.sh
tests/: perfetto_parity.py
tools/: llama_opcode_dump.py  llama_parity_runner.py  llama_parity_sweep.py  scil_codegen_manifest.py  scil_codegen_rust.py
web/: .gitignore  .prettierignore  .prettierrc.json  README.md  README_speed.md  app.py  emulator_service.py  keyboard_handler.py  keyboard_memory_overlay.py  package-lock.json  package.json  playwright.config.ts  requirements.txt  run.py  run_tests.py  test_api.py  tsconfig.json  verify_fixes.py  vite.config.ts
web/emulator-wasm/: Cargo.toml  build.rs
web/emulator-wasm/src/: lib.rs
web/emulator-wasm/testdata/: gen_pf1_demo_rom.py  pf1_demo_rom_window.rom
web/emulator-wasm/tests/: stub_dispatch.js
(+132 files in other folders)
