[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "binja-esr"
version = "0.1.0"
description = "Binary Ninja SC62015 architecture plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["lark", "bincopy", "plumbum", "binja-test-mocks"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pyright",
    "ruff",
    "serial",  # for testing with real hardware
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["sc62015/pysc62015/test*"]

[tool.coverage.run]
source = ["sc62015/pysc62015"]
