[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "binja-esr"
version = "0.1.0"
description = "Binary Ninja SC62015 architecture plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["lark", "bincopy", "plumbum", "binja-test-mocks"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pyright",
    "ruff",
    "serial",  # for testing with real hardware
]
pce500 = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "grpcio-tools>=1.48.0",  # Required to build retrobus-perfetto
    "protobuf>=3.20.0,<5.0.0",  # Required by retrobus-perfetto
    "retrobus-perfetto @ file:./pce500/third_party/retrobus-perfetto/py",
]
web = [
    "Flask>=2.3.0",
    "flask-cors>=4.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["sc62015/pysc62015/test*"]

[tool.coverage.run]
source = ["sc62015/pysc62015"]
