[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binja-esr"
version = "0.1.0"
description = "Binary Ninja SC62015 architecture plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark",
    "bincopy",
    "plumbum",
    "binja-test-mocks",
    "protobuf>=5.26.0",
    "pytesseract>=0.3.13",
    "hypothesis>=6.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.100.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
    "pyserial",  # for testing with real hardware
]
pce500 = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "retrobus-perfetto>=0.2.2",
    "pytesseract>=0.3.10",
    "maturin>=1.0.0",
    "maturin-import-hook>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "sc62015",
    "pce500",
    "__init__.py",
]
exclude = [
    "sc62015/pysc62015/test*",
    "*/tests/*",
    "**/test_*.py",
]

[tool.coverage.run]
source = ["sc62015/pysc62015"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/build",
    "**/dist",
]

[tool.uv]
package = false
