[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "binja-helpers"
version = "0.1.0"
description = "Utility helpers for developing Binary Ninja plugins without an installed Binary Ninja."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools]
packages = ["binja_helpers"]
package-dir = {"binja_helpers" = "."}

[tool.coverage.run]
source = ["binja_helpers"]
