[package]
name = "sc62015-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust SC62015 core scaffold (to be wrapped by PyO3)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
once_cell = "1.18"
rust_scil = { path = "../../emulators/rust_scil" }
retrobus-perfetto = { git = "https://github.com/mblsha/retrobus-perfetto.git" }
[features]
llama-tests = []
