[package]
name = "sc62015-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust SC62015 core scaffold (to be wrapped by PyO3)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
retrobus-perfetto = { git = "https://github.com/mblsha/retrobus-perfetto.git", rev = "e3bd7e53256dfff3689978efa90b331b51301a1f", optional = true }

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[features]
default = ["cli", "perfetto", "snapshot"]
llama-tests = []
cli = ["dep:clap"]
perfetto = ["dep:retrobus-perfetto"]
snapshot = ["dep:zip"]

[[bin]]
name = "pce500"
path = "src/bin/pce500.rs"
required-features = ["cli"]
