[package]
name = "sc62015-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust SC62015 core scaffold (to be wrapped by PyO3)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
retrobus-perfetto = { git = "https://github.com/mblsha/retrobus-perfetto.git", rev = "v0.3.1", optional = true }
crossterm = { version = "0.27", optional = true }
sha2 = { version = "0.10", optional = true }

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[features]
default = ["cli", "perfetto", "snapshot"]
llama-tests = []
cli = ["dep:clap", "dep:crossterm", "dep:sha2"]
perfetto = ["dep:retrobus-perfetto"]
snapshot = ["dep:zip"]

[[bin]]
name = "pce500"
path = "src/bin/pce500.rs"
required-features = ["cli"]

[[bin]]
name = "sc62015-lcd"
path = "src/bin/sc62015_lcd.rs"
required-features = ["cli"]
