[package]
name = "pce500-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

sc62015-core = { path = "../../sc62015/core", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"
